// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="px-5 -mx-5 -mb-8 overflow-hidden list-none slide-container swiper-container-initialized swiper-container-horizontal"
      style="height: 224px;"
    >
      <div
        class="h-full swiper-wrapper important:z-0 "
        style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition: 0ms;"
      >
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div>
            Slider item
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should render empty rows if template not provided 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="px-5 -mx-5 -mb-8 overflow-hidden list-none slide-container swiper-container-initialized swiper-container-horizontal"
      style="height: 224px;"
    >
      <div
        class="h-full swiper-wrapper important:z-0 "
        style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition: 0ms;"
      >
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should render pagination 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="px-5 -mx-5 -mb-8 overflow-hidden list-none slide-container swiper-container-initialized swiper-container-horizontal"
      style="height: 288px;"
    >
      <div
        class="h-full swiper-wrapper important:z-0 "
        style="width: auto; transform: translate3d(NaNpx, 0px, 0px); transition: 0ms;"
      >
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
        <div
          class="swiper-slide"
          style="height: 192px; margin-top: 0px;"
        >
          <div />
        </div>
      </div>
      <div
        class="flex items-center justify-center h-6 swiper-pagination important:bottom-8 important:z-0 swiper-pagination-clickable swiper-pagination-bullets"
      />
    </div>
  </div>
</div>
`;
